--- a/src/content/docs/tools/gaming/emergence.mdx
+++ b/src/content/docs/tools/gaming/emergence.mdx
@@ -11,4 +11,10 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.emergence.site/introduction/readme"
     toolDocsLink="https://docs.emergence.site/introduction/readme"
 >
+
+It provides features such as: 
+- wallet authentication
+-  smart contracts calls
+-  NFT inventory services
+
 </ToolLayout>
