--- a/src/content/docs/tools/gaming/mirage.mdx
+++ b/src/content/docs/tools/gaming/mirage.mdx
@@ -11,4 +11,10 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://mirage.xyz/docs/"
     toolDocsLink="https://mirage.xyz/docs/"
 >
+
+The SDKs for both platforms are EVM compatible and have the following features:
+- Interaction with Web3 wallets (either WalletConnect or MetaMask) for all supported platforms
+- Interaction with EVM-compatible blockchains
+- Interaction with smart contracts
+
 </ToolLayout>
