--- a/src/content/docs/tools/gaming/web3unity.mdx
+++ b/src/content/docs/tools/gaming/web3unity.mdx
@@ -11,4 +11,12 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.gaming.chainsafe.io/"
     toolDocsLink="https://docs.gaming.chainsafe.io/"
 >
+
+The SDK is compatible with most EVM-based chains such as SKALE, Ethereum, etc.
+
+Because it's built on top of Nethereum it drives most of capabilities of the library, such as:
+- Sign & verify digital signatures
+- Multiple ERC-20, ERC-721, ERC-1155 token interactions
+- Metamask connection
+
 </ToolLayout>
