--- a/src/content/docs/tools/gaming/web3unreal.mdx
+++ b/src/content/docs/tools/gaming/web3unreal.mdx
@@ -11,4 +11,12 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://web3unreal.readthedocs.io/en/latest/index.html"
     toolDocsLink="https://web3unreal.readthedocs.io/en/latest/index.html"
 >
+
+Some of the features are:
+- Interaction with remote node via JSON RPC
+- Smart-contract ABI parsing
+- Smart contracts interactions 
+- Support of common EIPs and ERCs
+
+
 </ToolLayout>
