--- a/src/content/docs/tools/index.mdx
+++ b/src/content/docs/tools/index.mdx
@@ -8,6 +8,7 @@ sidebar:
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
+The tools section covers available tooling for developing on SKALE. This includes SDKs, Wallets, Libraries, and more. The following section contains links to their respective categories.
 
 ## Explore Tools by Category
 
