--- a/src/content/docs/tools/libraries/kethereum.mdx
+++ b/src/content/docs/tools/libraries/kethereum.mdx
@@ -11,4 +11,14 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://github.com/komputing/KEthereum"
     toolDocsLink="https://github.com/komputing/KEthereum"
 >
+
+KEthereum gives the possibility to pick and choose the modules the developer need and keep the footprint of the library small this way. Some of the modules are:
+
+- **eip155**: TX signing with Simple replay attack protection
+- **blockscout**: BlockScout BlockExplorer helper functions
+- **ERC20**: Contract wrapper for the ERC20 Token standard
+- **wallet**: functions for keys from and to JSON wallet files
+
+## Implementation Example
+
 </ToolLayout>
