--- a/src/content/docs/tools/skale/blockscout.mdx
+++ b/src/content/docs/tools/skale/blockscout.mdx
@@ -11,4 +11,10 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.blockscout.com/"
     toolDocsLink="https://docs.blockscout.com/for-developers/deployment/manual-old-ui"
 >
+
+Blockscout gives everyone access to essential on-chain data, the ability to interact with smart contracts, and the tools to view and verify transactions quickly and easily.
+
+Currently all SKALE chains use Blockscout as their block explorer and can be found on [SKALE portal page under chains](https://portal.skale.space/chains).
+
+
 </ToolLayout>
