--- a/src/content/docs/tools/skale/sfuel-station.mdx
+++ b/src/content/docs/tools/skale/sfuel-station.mdx
@@ -11,4 +11,31 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 	toolLink=""
 	toolDocsLink=""
 >
+
+It supports multiple chains by default as well as both [Mainnet](https://sfuel.skale.network/) and [Testnet](https://sfuel.skale.network/staging).
+
+The sFUEL Station is a great tool that can be used for easy onboarding for users that utilize many different SKALE applications that are supported by the sFUEL Station. 
+However, the sFUEL Station can be a distraction for initial onboarding and should not be used as a primary sFUEL Distribution option, but available as an alternative for users.
+
+### Add your chain
+
+Adding your chain to the sFUEL Station is a three-step process:
+
+1. Deploy an on-chain faucet. The on-chain faucet should at a minimum provide the functionality found on SKALE Proof-of-Work distribution, however, for a more robust contract that offers more control such as pausing, changing limits, and destruction; checkout the [sFUEL Distribution Contract](https://github.com/Dirt-Road-Development/sfuel-distribution-contract).
+
+2. Once the smart contract is deployed on your SKALE Chain, head over to the [sFUEL Station on Github](https://github.com/Dirt-Road-Development/sfuel-station). Fork the repository, clone the repo down, and open up the folder in your favourite editor or terminal. 
+                          
+- Edit [pow.json](https://github.com/Dirt-Road-Development/sfuel-station/blob/master/src/config/pow.json) and add your chain information into the proper location. If you are using a testnet/staging chain, make sure to add it into the first array. If this is for a mainnet chain, add it to the second array. The details required are chainId, display name, rpc url, and the public object which should have an address field, a fnHash which is the function that will be called by Proof of Work, and then the max fuel amount which should match your smart contract. 
+
+:::tip[Developer Note]
+The sFUEL Station for Staging/Testnet is currently operating in a different way than the Mainnet distribution. Send 1 sFUEL to 0x61590e0C2aC946E227Afed97873848cc0ad4aE48 on your SKALE Chain.
+:::
+
+3. Edit the chains.json, platforms.json, and projects.json accordingly.
+- Create a [Pull Request](https://github.com/Dirt-Road-Development/sfuel-station/pulls) and await for a review.
+
+### Management
+
+Managing your on-chain faucet is very simple, just keep it filled up. How much you want to put in your on-chain faucet is up to you. Less is always better, however, if you know that you may not be able to fill it often, err on the side of more to reduce downtime and potential issues.
+
 </ToolLayout>
