--- a/src/content/docs/tools/data/subsquid.mdx
+++ b/src/content/docs/tools/data/subsquid.mdx
@@ -11,4 +11,15 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 	toolLink="https://subsquid.io/"
 	toolDocsLink="https://docs.subsquid.io/"
 >
+
+Subsquid is like an ETL (Extract, Transform, and Load) tool.
+
+Developers can use Subsquid to extract SKALE chain data and process EVM logs in one project and serve this data on a GraphQL endpoint.
+
+Currently, Subsquid is available on the following SKALE chains:
+
+| Mainnet Endpoints | Endpoint lookup cmd | Archive Endpoint |
+| --------- | --------- | --------- |
+| SKALE Nebula Hub | `lookupArchive('skale-nebula')` | `https://v2.archive.subsquid.io/network/skale-nebula` |
+
 </ToolLayout>
