--- a/src/content/docs/tools/libraries/ethersv6.mdx
+++ b/src/content/docs/tools/libraries/ethersv6.mdx
@@ -11,4 +11,56 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.ethers.org/v6/"
     toolDocsLink="https://docs.ethers.org/v6/"
 >
+
+Some of the main features are:
+- Import and export JSON wallets (Geth, Parity and crowdsale)
+- Import and export BIP 39 mnemonic phrases (12 word backup phrases) and HD Wallets
+- Meta-classes create JavaScript objects from any contract ABI, including ABIv2 and Human-Readable ABI
+Connect to Ethereum nodes over JSON-RPC, INFURA, Etherscan, Alchemy or Metamask
+
+The biggest difference between v5 and v6 is in the use of modern ES6 features. The major changes can been seen on:
+- [BigNumbers](https://docs.ethers.org/v6/migrating/#migrate-bigint)
+- [Contracts](https://docs.ethers.org/v6/migrating/#migrate-contracts)
+- [Importing](https://docs.ethers.org/v6/migrating/#migrate-importing)
+- [Providers](https://docs.ethers.org/v6/migrating/#migrate-providers)
+- [Signatures](https://docs.ethers.org/v6/migrating/#migrate-signatures)
+- [Transactions](https://docs.ethers.org/v6/migrating/#migrate-transactions)
+- [Utilities](https://docs.ethers.org/v6/migrating/#migrate-utils)
+- [Removed Items](https://docs.ethers.org/v6/migrating/#migrate-missing)
+
+## Implementation Example
+
+**Package Install:**
+```shell
+npm install ethers
+```
+
+**Full Example of Sending a Transaction**
+```typescript
+import { ethers } from 'ethers';
+import {contract_abi,contract_adress} from "./contract";
+import dotenv from 'dotenv'; 
+dotenv.config();
+
+const skale_provider = "https://staging-v3.skalenodes.com/v1/staging-fast-active-bellatrix";
+const provider = new ethers.JsonRpcProvider(skale_provider);
+const pk = process.env.PRIVATE_KEY || "";
+const signer = new ethers.Wallet(pk, provider);
+
+const contract = new ethers.Contract(contract_adress, contract_abi, signer);
+
+async function ContractSendTx() {
+    const data = await contract._mintTest.populateTransaction(signer.address);
+    data.gasLimit = ethers.toBigInt(500000);
+    data.gasPrice = ethers.toBigInt(100000);
+    data.nonce = await provider.getTransactionCount(signer.address);
+
+    const tx = await signer.sendTransaction(data)
+
+    console.log(tx.hash);
+
+}
+ContractSendTx();
+```
+
 </ToolLayout>
