--- a/src/content/docs/tools/libraries/viem.mdx
+++ b/src/content/docs/tools/libraries/viem.mdx
@@ -11,4 +11,54 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://viem.sh/"
     toolDocsLink="https://viem.sh/"
 >
+
+Some of the main features are:
+- Abstractions over the JSON-RPC API 
+- APIs for interacting with Smart Contracts
+- Utilities for working with ABIs
+
+## Implementation Example
+
+**Package Install**
+```shell
+npm i viem
+```
+
+**Send Transaction**
+```typescript
+import {createPublicClient, http,parseGwei } from "viem";
+import { privateKeyToAccount } from 'viem/accounts'
+import { skaleChaosTestnet } from "viem/chains";
+import {contract_abi,contract_adress} from "./contract";
+
+import dotenv from 'dotenv'; 
+dotenv.config();
+
+async function main() {
+	const client = createPublicClient({
+		chain: skaleChaosTestnet,
+		transport: http()
+	});
+
+	const pk = "0x";
+	const account=privateKeyToAccount(pk);
+
+	const signature = await account.signTransaction({
+		to:contract_adress,
+		gas:parseGwei('0.0005'),
+		gasPrice:parseGwei('0.0001'),
+		nonce: await client.getTransactionCount({address:account.address}),
+		data: '0xeefa7dfd0000000000000000000000002b3937fe6ef38cd4be0d9ceb05823087b716d689'
+	})
+
+	const hash = await client.sendRawTransaction({serializedTransaction:signature});
+	console.log(hash);
+}
+
+main()
+	.catch((err) => {
+		console.error(err);
+		process.exitCode = 1;
+	});
+```
 </ToolLayout>
