--- a/src/content/docs/tools/oracles/razor.mdx
+++ b/src/content/docs/tools/oracles/razor.mdx
@@ -10,4 +10,43 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 	toolLink="https://razor.network/"
 	toolDocsLink="https://docs.razor.network/docs/consume-data-feeds/introduction"
 >
+## Implementation Example
+
+To consume the Razor Network price feeds, your contract should reference ITransparentForwarder. This is an interface that defines the external functions implemented by Data Feeds
+
+```solidity
+pragma solidity ^0.8.0;
+interface ITransparentForwarder {
+    /**
+     * @dev using the hash of collection name, clients can query the result of that collection
+     * @param _name bytes32 hash of the collection name
+     * @return result of the collection and its power
+     */
+    function getResult(bytes32 _name) external payable returns (uint256, int8);
+}
+contract DataFeed {
+    ITransparentForwarder public transparentForwarder;
+    uint256 public latestResult;
+    int8 public latestPower;
+
+    constructor() {
+        transparentForwarder = ITransparentForwarder(
+            /* Transparent Forwarder contract address deployed on respective chains */
+        );
+    }
+    /// @notice fetch collection result by name
+    /// @param name bytes32 hash of the collection name
+    /// @return result of the collection and its power
+    /// @return power
+    function getResult(bytes32 name) public payable returns (uint256, int8) {
+        (uint256 result, int8 power) = transparentForwarder.getResult{
+            value: msg.value
+        }(name);
+        latestResult = result;
+        latestPower = power;
+        return (result, power);
+    }
+}
+```
+
 </ToolLayout>
