--- a/src/content/docs/tools/wallets/coinbase.mdx
+++ b/src/content/docs/tools/wallets/coinbase.mdx
@@ -11,4 +11,35 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.cloud.coinbase.com/wallet-sdk/docs/welcome"
     toolDocsLink="https://docs.cloud.coinbase.com/wallet-sdk/docs/welcome"
 >
+
+## Implementation Example
+
+**Package Install:**
+```shell
+npm install --save web3 @coinbase/wallet-sdk
+```
+
+````javascript
+import CoinbaseWalletSDK from '@coinbase/wallet-sdk'
+import Web3 from 'web3'
+
+const APP_NAME = 'My Awesome App'
+const APP_LOGO_URL = 'https://example.com/logo.png'
+const SKALE_JSONRPC_URL = 'https://your.skale.endpoint'
+const SKALE_CHAIN_ID = 123456
+
+// Initialize Coinbase Wallet SDK
+export const coinbaseWallet = new CoinbaseWalletSDK({
+  appName: APP_NAME,
+  appLogoUrl: APP_LOGO_URL,
+  darkMode: false
+})
+
+// Initialize a Web3 Provider object
+export const skale = coinbaseWallet.makeWeb3Provider(SKALE_JSONRPC_URL, SKALE_CHAIN_ID)
+
+// Initialize a Web3 object
+export const web3 = new Web3(skale)
+````
+
 </ToolLayout>
