--- a/src/content/docs/tools/wallets/portis.mdx
+++ b/src/content/docs/tools/wallets/portis.mdx
@@ -11,4 +11,32 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.portis.io/#/quick-start"
     toolDocsLink="https://docs.portis.io/#/quick-start"
 >
+
+## Implementation Example
+
+```shell
+npm install --save web3 @portis/web3
+```
+
+```javascript
+import Portis from '@portis/web3';
+import Web3 from 'web3';
+
+
+// Your setup information
+const endpoint = 'https://your.skale.endpoint'; // your SKALE Chain endpoint
+const skaleChainId = 123456                     // chainId of your SKALE Chain
+const testAPIKey = 'your_api_key';
+
+const mySKALEChain = {
+    nodeUrl: endpoint,
+    chainId: skaleChainId,
+    nodeProtocol: "rpc"
+}
+
+// Setting network
+const portis = new Portis(testAPIKey, mySKALEChain);
+let web3 = new Web3(portis.provider);
+```
+
 </ToolLayout>
