--- a/src/content/docs/tools/wallets/stardust.mdx
+++ b/src/content/docs/tools/wallets/stardust.mdx
@@ -11,4 +11,38 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
     toolLink="https://docs.stardust.gg/docs"
     toolDocsLink="https://docs.stardust.gg/docs"
 >
+
+With this solution it's possible to create a frictionless user onboarding experience, by removing the need for them to manage their own private keys.
+
+## Implementation Example 
+
+The following example provides a number of examples on how to use Stardust WaaS. The default chain used is SKALE Chaos Testnet. For the full code repo go [here](https://github.com/Dirt-Road-Development/stardust-examples)
+
+````javascript
+const { StardustCustodialSDK, StardustApp, StardustWallet } = require("@stardust-gg/stardust-custodial-sdk");
+const { STARDUST_API_KEY, RPC_URL } = require("../../config");
+const createStardustWallet = require("./createWallet");
+const { providers } = require("ethers");
+const getStardustWallet = require("./getWallet");
+
+function stardust() {
+	const provider = new providers.JsonRpcProvider(RPC_URL);
+	const sdk = new StardustCustodialSDK(STARDUST_API_KEY);
+
+	async function getWallet(walletId) {
+		return await getStardustWallet(sdk, walletId);
+	}
+
+	return {
+		createWallet: async() => createStardustWallet(sdk),
+		getWallet,
+		getSigner: async(walletId) => {
+			const wallet = await getWallet(walletId);
+			return wallet.signers.ethers.connect(provider);
+		}
+	}
+}
+module.exports = stardust();
+````
+
 </ToolLayout>
