--- a/src/content/docs/tools/wallets/thirdweb.mdx
+++ b/src/content/docs/tools/wallets/thirdweb.mdx
@@ -6,9 +6,66 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph=""
+    introParagraph="Thirdweb provides a wallet solution that can accomodate different needs. Their connect wallet UI allows connecting with the common industry wallets (ex: Metamask, Coinbase, WalletConnect) as well as creating an MPC wallet with solcial logins."
     toolName="Thirdweb"
     toolLink="https://portal.thirdweb.com/wallets"
     toolDocsLink="https://portal.thirdweb.com/wallets"
 >
+
+## Implementation Example
+
+**Package Install**
+
+<Tabs>
+<TabItem label="NPM">
+```shell
+npm install @thirdweb-dev/react
+```
+</TabItem>
+<TabItem label="Yarn">
+```shell
+yarn add @thirdweb-dev/react
+```
+</TabItem>
+</Tabs>
+
+**Code**
+
+```javascript
+import {
+  ThirdwebProvider,
+  ConnectWallet,
+  metamaskWallet,
+  coinbaseWallet,
+  localWallet,
+  embeddedWallet,
+} from "@thirdweb-dev/react";
+
+export default function App() {
+  return (
+    <ThirdwebProvider
+      activeChain="nebula"
+      clientId="YOUR_CLIENT_ID"
+      locale={en()}
+      supportedWallets={[
+        metamaskWallet(),
+        coinbaseWallet({ recommended: true }),
+        localWallet(),
+        embeddedWallet({
+          auth: {
+            options: ["facebook", "google"],
+          },
+        }),
+      ]}
+    >
+      <ConnectWallet
+        theme={"dark"}
+        switchToActiveChain={true}
+        modalSize={"compact"}
+      />
+    </ThirdwebProvider>
+  );
+}
+```
+
 </ToolLayout>
